# qontrol

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  ad  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  publish-doc.yml
FAQ/: index.html
api/: index.html
contributing/: index.html
docs/: FAQ.md  api.md  conftest.py  contributing.md  grape.md  index.md  requirements.txt
docs/examples/: Kerr_oscillator.ipynb  Kerr_oscillator_time.ipynb  qubit.ipynb
examples/: Kerr_oscillator.py  Kerr_oscillator_pwc.py  dynamic_chi.py  qubit_modulated.py
examples/Kerr_oscillator/: index.html
examples/qubit/: index.html
opt_dynamiqs/: __init__.py  fidelity.py  file_io.py  grape.py  options.py
optamiqs/: __init__.py  cost.py  fidelity.py  file_io.py  grape.py  hamiltonian_time.py  options.py  pulse_optimizer.py
qontrol/: __init__.py  conftest.py  cost.py  file_io.py  grape.py  model.py  optimize.py  options.py  plot.py  recorder.py  update.py
qontrol/utils/: fidelity_utils.py  file_io.py  utils.py
search/: search_index.json
tests/: abstract_system.py  test_costs.py  test_grape.py  test_optimize.py
